# CT-CatPhan

./: .gitignore  BUILD_EXECUTABLES.md  CLI_USAGE.md  INSTALLATION.md  QUICK_START.md  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: docs.yml  release.yml
Catphan404/: analysis.py  cli.py
daylogs/: CHANGES_2026-02-23.md
docs/: CHANGELOG.md  Makefile  cli_usage.md  conf.py  index.rst  make.bat  overview.rst  quick_start.md
docs/api/: index.rst  package.rst
packaging/pyinstaller/: CT-CatPhan.spec
scripts/: build_executable.bat  build_executable.ps1
src/catphan500/: __init__.py  analysis.py  cli.py  gui_launcher.py  io.py
