[build-system]
requires = ["setuptools>=69.0", "setuptools-scm[toml]>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "catphan500"
dynamic = ["version"]
description = "CT-CatPhan toolkit for CatPhan CT image QA workflows."
authors = [
    { name = "Oz", email = "jacgwat@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

# Core dependencies for the package itself
dependencies = [
    "numpy",
    "scipy",
    "pydicom",
    "matplotlib",
    "imageio",  # Needed for CLI image loading
    "scikit-image",  # Needed for image processing utilities
    "alexandria-project",  # Distribution name for the alexandria analysis backend
]

# Optional dependency groups used for local development workflows.
[project.optional-dependencies]
docs = [
    "Sphinx>=8.0,<9.0",
    "myst-parser>=4.0,<5.0",
]

# -----------------------------
# CLI entry point
# -----------------------------
[project.scripts]
catphan500 = "catphan500.cli:main"

[project.gui-scripts]
catphan500-gui = "catphan500.gui_launcher:main"

# -----------------------------
# src/ package layout
# -----------------------------
[tool.setuptools]
package-dir = {"" = "src"}

# -----------------------------
# Package discovery
# -----------------------------
[tool.setuptools.packages.find]
where = ["src"]
include = ["catphan500*"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
